fixed overlapping menu items

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -463,6 +463,10 @@ footer {
 }
 
 @media (max-width: 768px) {
+	
+	.item-desc {
+		width: 80%;
+	}
 
 	h1 {
 		font-size: 1.2rem;
